[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://playerBody2D.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="ui" type="Control" parent="."]
margin_right = 800.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottomPanel" type="Panel" parent="ui"]
margin_top = 582.0
margin_right = 800.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keysHelp" type="RichTextLabel" parent="ui/bottomPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 300.0
margin_bottom = 18.0
text = "WASD to move. SPACE to attack."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightPanel" type="Panel" parent="ui"]
margin_left = 775.0
margin_right = 800.585
margin_bottom = 582.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 200, 200 )
collision_mask = 15
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerBody2D"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="playerBody2D"]

[node name="WallMap" type="TileMap" parent="."]
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 15
format = 1

[node name="FloorMap" type="TileMap" parent="."]
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
